--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -55,7 +55,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements/local.txt
-          pip install pytest-github-actions-annotate-failures
+          # https://github.com/pytest-dev/pytest-github-actions-annotate-failures/pull/68 isn't yet in a release
+          pip install git+https://github.com/pytest-dev/pytest-github-actions-annotate-failures.git@6e66cd895fe05cd09be8bad58f5d79110a20385f
 
       - name: Apply unapplied migrations
         env:
