--- a/compose.override.local.yml
+++ b/compose.override.local.yml
@@ -44,12 +44,10 @@ services:
     networks:
       default: {}
     volumes:
-      - $CI_PROJECT_DIR/docs:/docs:z
-      - $CI_PROJECT_DIR/config:/app/config:z
-      - $CI_PROJECT_DIR/scram:/app/scram:z
+      - $CI_PROJECT_DIR:/app:z
     ports:
-      - "7000"
-    command: /start-docs
+      - "${DOCS_PORT:-8888}"
+    command: "mkdocs serve -a 0.0.0.0:${DOCS_PORT:-8888}"
 
   redis:
     ports:
