--- a/.github/workflows/behave.yml
+++ b/.github/workflows/behave.yml
@@ -60,6 +60,10 @@ jobs:
           POSTGRES_DB: test_scram
         run: make coverage.xml
 
+      - name: Dump docker logs on failure
+        if: failure()
+        uses: jwalton/gh-docker-logs@v2
+
       - name: Upload Coverage to Coveralls
         uses: coverallsapp/github-action@v2
 
