--- a/.github/workflows/behave.yml
+++ b/.github/workflows/behave.yml
@@ -45,6 +45,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose make
 
+      - name: Check Docker state (pre-build)
+        run: docker ps
+
       - name: Build Docker images
         run: make build
 
@@ -53,6 +56,9 @@ jobs:
 
       - name: Run Application
         run: make run
+
+      - name: Check Docker state (pre-test)
+        run: docker ps
 
       - name: Run pytest + behave with Coverage
         env:
@@ -77,6 +83,11 @@ jobs:
         uses: 5monkeys/cobertura-action@v14
         with:
           minimum_coverage: '50'
+
+
+      - name: Check Docker state (post-test)
+        if: always()
+        run: docker ps
 
       - name: Stop Services
         if: always()
