Simplify migration logic

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -57,26 +57,19 @@ jobs:
           pip install -r requirements/local.txt
           pip install pytest-github-actions-annotate-failures
 
-      - name: Apply unapplied migrations
+      - name: Apply migrations
         env:
           DATABASE_URL: "postgres://scram:@localhost:5432/test_scram_${{ matrix.python-version }}"
         run: |
           python manage.py makemigrations --noinput
-          UNAPPLIED_MIGRATIONS=$(python manage.py showmigrations --plan | grep '\[ \]' | awk '{print $2}')
-          if [ -n "$UNAPPLIED_MIGRATIONS" ]; then
-            for migration in $UNAPPLIED_MIGRATIONS; do
-              python manage.py migrate $migration --fake-initial --noinput
-            done
-          else
-            echo "No unapplied migrations."
-          fi
+          python manage.py migrate --noinput
 
       - name: Check for duplicate migrations
         run: |
           if python manage.py makemigrations --dry-run | grep "No changes detected"; then
             echo "No duplicate migrations detected."
           else
-            echo "Warning: Potential duplicate migrations detected. Please review."
+            echo "::warning:: Potential duplicate migrations detected. Please review."
           fi
 
       - name: Run Pytest
