Fix Dockerfile args

--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -1,4 +1,6 @@
-FROM python:${PYTHON_IMAGE_VER:-3.12}-slim-bookworm
+ARG PYTHON_IMAGE_VER=3.12
+
+FROM python:${PYTHON_IMAGE_VER}-slim-bookworm
 
 ENV PYTHONUNBUFFERED 1
 
