Add a behave test for the next version of Python (expected to fail)

--- a/.github/workflows/pytest_next_python.yml
+++ b/.github/workflows/pytest_next_python.yml
@@ -14,7 +14,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  pytest:
+  pytest_next_python:
     name: Run Pytest
     runs-on: ubuntu-latest
     strategy:
