Enable Python 3.11 and 3.12 GH Action Testing (#95)
A couple extra things:

* Add a Behave test with Python 3.13, similar to the pytest one
* Make the Python version an argument to the Dockerfiles

--- a/.github/workflows/behave_next_python.yml
+++ b/.github/workflows/behave_next_python.yml
@@ -1,10 +1,10 @@
 ---
-name: Run behave
+name: Run behave with unsupported Python versions
 
 on:
   push:
     branches:
-      - "**"
+      - '**'
   pull_request:
     branches:
       - main
@@ -14,13 +14,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  behave:
+  behave_next_python:
     name: Run Behave
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
-        python-version: ["3.11", "3.12"]
+        python-version: ['3.13']
 
     steps:
       - name: Check out the code
@@ -43,10 +43,12 @@ jobs:
           PYTHON_IMAGE_VER: "${{ matrix.python-version }}"
 
       - name: Migrate Database
-        run: make migrate
+        run: |
+          make migrate || echo "::warning:: migrate failed on future Python version ${{ matrix.python-version }}."
 
       - name: Run Application
-        run: make run
+        run: |
+          make run || echo "::warning:: run failed on future Python version ${{ matrix.python-version }}."
 
       - name: Check Docker state (pre-test)
         run: docker ps
@@ -55,28 +57,12 @@ jobs:
         env:
           POSTGRES_USER: scram
           POSTGRES_DB: test_scram
-        run: make coverage.xml
+        run: |
+          make coverage.xml || echo "::warning:: pytest + behave failed on future Python version ${{ matrix.python-version }}."
 
       - name: Dump docker logs on failure
         if: failure()
         uses: jwalton/gh-docker-logs@v2
-
-      - name: Upload Coverage to Coveralls
-        if: matrix.python-version == '3.12'
-        uses: coverallsapp/github-action@v2
-
-      - name: Upload Coverage to GitHub
-        if: matrix.python-version == '3.12'
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: coverage.xml
-
-      - name: Display Coverage Metrics
-        if: matrix.python-version == '3.12'
-        uses: 5monkeys/cobertura-action@v14
-        with:
-          minimum_coverage: "50"
 
       - name: Check Docker state (post-test)
         if: always()
