--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -1,4 +1,6 @@
-FROM python:3.12-slim-bookworm
+ARG PYTHON_IMAGE_VER=3.12
+
+FROM python:${PYTHON_IMAGE_VER}-slim-bookworm
 
 ENV PIP_ROOT_USER_ACTION ignore
 ENV PYTHONUNBUFFERED 1
