--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -26,8 +26,9 @@ services:
       - production_postgres_data_backups:/backups:z
     env_file:
       - ./.envs/.production/.postgres
+      - /etc/vault.d/secrets/kv_root_security.env
     deploy:
-      replicas: 0
+      replicas: ${POSTGRES_ENABLED:-0}
 
   nginx:
     image: nginx:1.19
