--- a/.github/workflows/behave_next_python.yml
+++ b/.github/workflows/behave_next_python.yml
@@ -26,6 +26,19 @@ jobs:
       - name: Check out the code
         uses: actions/checkout@v4
 
+      - name: Cache Docker images.
+        uses: ScribeMD/docker-cache@0.3.7
+        with:
+          key: docker-${{ runner.os }}-${{ hashFiles('docker-compose.yaml') }}
+
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-single-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-single-buildx
+
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
