Add missing migration and ensure we fail if we're missing future ones

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -65,15 +65,10 @@ jobs:
           python manage.py makemigrations --noinput
           python manage.py migrate --noinput
 
-      - name: Check for duplicate migrations
+      - name: Check for missing migrations
         env:
           DATABASE_URL: "postgres://scram:@localhost:5432/test_scram_${{ matrix.python-version }}"
-        run: |
-          if python manage.py makemigrations --dry-run | grep "No changes detected"; then
-            echo "No duplicate migrations detected."
-          else
-            echo "::warning:: Potential duplicate migrations detected. Please review."
-          fi
+        run: python manage.py makemigrations --check
 
       - name: Run Pytest
         env:
