refactor(whofilter): move filtering the users with entries into a class based filter since the relatedfield doesn't apply here

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,9 @@ max-complexity = 7 # our current code adheres to this without too much effort
 "test.py" = [
     "S105", # hardcoded password as argument
 ]
+"scram/route_manager/**" = [
+    "DOC201", # documenting return values
+]
 "scram/users/**" = [
     "DOC201", # documenting return values
     "FBT001", # minimal issue; don't need to mess with in the User app
