refactor(remote-updates): update scaffolding to start dealing with remote adds in addition to expirations

--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -22,7 +22,7 @@ services:
     volumes:
       - ./staticfiles:/staticfiles
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://django:5000/process_expired/"]
+      test: ["CMD", "curl", "-f", "http://django:5000/process_updates/"]
 
   postgres:
     logging:
