Enable ENV var control of replicas. This allows failure testing.

--- a/compose.yml
+++ b/compose.yml
@@ -19,6 +19,8 @@ services:
       timeout: 30s
       start_period: 30s
       retries: 5
+    deploy:
+      replicas: ${DJANGO_REPLICAS:-1}
 
   postgres:
     build:
@@ -51,6 +53,8 @@ services:
       - net.ipv6.conf.all.disable_ipv6=0
     healthcheck:
       test: ["CMD", "gobgp", "global"]
+    deploy:
+      replicas: ${GOBGP_REPLICAS:-1}
 
   translator:
     build:
@@ -65,3 +69,5 @@ services:
       default: {}
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=0
+    deploy:
+      replicas: ${TRANSLATOR_REPLICAS:-1}
