feat(process-updates): Skip processing new entries that are found on the originating server. Still is janky and needs help.

--- a/compose.override.local.yml
+++ b/compose.override.local.yml
@@ -63,6 +63,8 @@ services:
   translator:
     volumes:
       - ./translator/tests/:/app/tests/
+    env_file:
+      - ./.envs/.local/.translator
     ports:
       - 56781:56781
     environment:
