feat(translator,gobgp): build custom version and test if table filters are working appropriately.

--- a/compose.override.local.yml
+++ b/compose.override.local.yml
@@ -54,6 +54,8 @@ services:
       - "6379"
 
   gobgp:
+    build:
+      dockerfile: ./compose/local/gobgp/Dockerfile
     volumes:
       - $CI_PROJECT_DIR/gobgp_config:/config:z
     ports:
