--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,6 +21,16 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  docker-login:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_PULL_AUTH_USER }}
+          password: ${{ secrets.DOCKER_HUB_PULL_AUTH_PAT }}
+
   deploy:
     environment:
       name: github-pages
