--- a/.github/workflows/behave.yml
+++ b/.github/workflows/behave.yml
@@ -14,16 +14,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  docker-login:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_PULL_AUTH_USER }}
-          password: ${{ secrets.DOCKER_HUB_PULL_AUTH_PAT }}
-
   behave:
     name: Run Behave
     runs-on: ubuntu-latest
@@ -46,6 +36,12 @@ jobs:
 
       - name: Check Docker state (pre-build)
         run: docker ps
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_PULL_AUTH_USER }}
+          password: ${{ secrets.DOCKER_HUB_PULL_AUTH_PAT }}
 
       - name: Build Docker images
         run: make build
