--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -14,16 +14,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  docker-login:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_PULL_AUTH_USER }}
-          password: ${{ secrets.DOCKER_HUB_PULL_AUTH_PAT }}
-
   pytest:
     name: Run Pytest
     runs-on: ubuntu-latest
@@ -60,6 +50,12 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_PULL_AUTH_USER }}
+          password: ${{ secrets.DOCKER_HUB_PULL_AUTH_PAT }}
 
       - name: Install dependencies
         run: |
