--- a/.github/workflows/behave.yml
+++ b/.github/workflows/behave.yml
@@ -37,6 +37,12 @@ jobs:
       - name: Check Docker state (pre-build)
         run: docker ps
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_PULL_AUTH_USER }}
+          password: ${{ secrets.DOCKER_HUB_PULL_AUTH_PAT }}
+
       - name: Build Docker images
         run: make build
         env:
