--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -51,6 +51,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_PULL_AUTH_USER }}
+          password: ${{ secrets.DOCKER_HUB_PULL_AUTH_PAT }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
