refactor(ruff): ignore comprehensions in ruff because we don't like them
also add a comment so we know what the INTERNAL_IPS stuff is about

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,8 +81,10 @@ ignore = [
     "DOC501", # add possible exceptions to the docstring (TODO)
     "ISC001", # handled by the formatter
     "RUF012", # need more widespread typing
-    "SIM102", # Use a single `if` statement instead of nested `if` statements
-    "SIM108", # Use ternary operator instead of `if`-`else`-block
+    "SIM102", # use a single `if` statement instead of nested `if` statements
+    "SIM108", # use ternary operator instead of `if`-`else`-block
+    "PERF401", # list comprehensions are harder to read in our opinion and not worth the performance gain
+    "PERF403", # dict comprehensions are harder to read in our opinion and not worth the performance gain
 ]
 
 [tool.ruff.lint.mccabe]
