--- a/.github/workflows/pytest_next_python.yml
+++ b/.github/workflows/pytest_next_python.yml
@@ -54,9 +54,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements/local.txt
+          python -m pip install uv
+          uv pip install -r requirements/local.txt
           # https://github.com/pytest-dev/pytest-github-actions-annotate-failures/pull/68 isn't yet in a release
-          pip install git+https://github.com/pytest-dev/pytest-github-actions-annotate-failures.git@6e66cd895fe05cd09be8bad58f5d79110a20385f
+          uv pip install git+https://github.com/pytest-dev/pytest-github-actions-annotate-failures.git@6e66cd895fe05cd09be8bad58f5d79110a20385f
 
       - name: Apply unapplied migrations
         env:
