ci(build): try using system python (this is what containers are for, RIGHT?!)

--- a/compose/local/docs/Dockerfile
+++ b/compose/local/docs/Dockerfile
@@ -26,7 +26,7 @@ RUN apt-get update \
 # Only re-run the pip install if these files have changed
 COPY requirements/base.txt requirements/local.txt requirements/production.txt /app/requirements/
 RUN pip install uv
-RUN uv pip install -r /app/requirements/local.txt -r /app/requirements/production.txt
+RUN uv pip install --system -r /app/requirements/local.txt -r /app/requirements/production.txt
 
 COPY . /app/
 
