--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -20,7 +20,7 @@ RUN apt-get update \
 # Requirements are installed here to ensure they will be cached.
 COPY ./requirements /requirements
 RUN pip install uv
-RUN uv pip install -r /requirements/local.txt
+RUN uv pip install --system -r /requirements/local.txt
 
 COPY ./compose/production/django/entrypoint /entrypoint
 RUN sed -i 's/\r$//g' /entrypoint
