--- a/compose/local/translator/Dockerfile
+++ b/compose/local/translator/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get update \
 # Requirements are installed here to ensure they will be cached.
 COPY ./translator/requirements /requirements
 RUN pip install uv
-RUN uv pip install -r /requirements/base.txt
+RUN uv pip install --system -r /requirements/base.txt
 
 RUN mkdir /app \
   && cd /app \
