--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -23,7 +23,7 @@ RUN addgroup --system django \
 # Requirements are installed here to ensure they will be cached.
 COPY ./requirements/ /requirements
 RUN pip install uv
-RUN uv pip install --no-cache-dir -r /requirements/production.txt \
+RUN uv pip install --system --no-cache-dir -r /requirements/production.txt \
     && rm -rf /requirements
 
 COPY --chown=django:django ./compose/production/django/entrypoint /entrypoint
