ci(build): Be like the cool kids and use `uv` (#145)
For now, let's just use the pip compatibility layer for `uv`. 

https://docs.astral.sh/uv/pip/

---------

Co-authored-by: Sam Oehlert <soehlert@es.net>

--- a/compose/local/translator/Dockerfile
+++ b/compose/local/translator/Dockerfile
@@ -12,7 +12,8 @@ RUN apt-get update \
 
 # Requirements are installed here to ensure they will be cached.
 COPY ./translator/requirements /requirements
-RUN pip install -r /requirements/base.txt
+RUN pip install uv
+RUN uv pip install --system -r /requirements/base.txt
 
 RUN mkdir /app \
   && cd /app \
